--- a/app/views/addproject.scala.html
+++ b/app/views/addproject.scala.html
@@ -4,18 +4,33 @@
 
 <html>
     <head>
-        <title>Add Project</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addProj.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
-        <script src="@routes.Assets.at("javascripts/project.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/addProj.js")" type="text/javascript"></script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Add Project</title>
+
+            <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
+            <!-- Custom CSS -->
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
+            <!-- jQuery -->
+        <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
+            <!-- Bootstrap Core JavaScript -->
+        <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
+
+            <!-- Plugin JavaScript -->
+        <script src="@routes.Assets.at("javascripts/jquery.easing.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/classie.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/cbpAnimatedHeader.js")" type="text/javascript"></script>
+
+            <!-- Custom Theme JavaScript -->
+        <script src="@routes.Assets.at("javascripts/freelancer.js")" type="text/javascript"></script>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addProj.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+
+        <script src="@routes.Assets.at("javascripts/project.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/addProj.js")" type="text/javascript"></script>
+
     </head>
     <body>
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -59,11 +74,6 @@
                 <div class="row">
                     <div class="col-lg-12" style="text-decoration-color: slategrey">
                         <form id="project" class="text-center" role="form" action = "/addproject" method = post>
-                            @*name: <input type="text" name="name"><br>*@
-                            @*image url: <input type="text" name="imageurl"><br>*@
-                            @*description: <input type="text" name="description"><br>*@
-                            @*manager: <input type="text" name="manager"><br>*@
-
                             <!-- add image -->
                         <div id="dropzone">
                             <div>drop image</div>
