--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,21 +6,27 @@
 
     <html>
         <head>
-            <title>Main</title>
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-            <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-            <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-            <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
-            <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
-            <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-            <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-            <script src="@routes.Assets.at("javascripts/project.js")" type="text/javascript"></script>
-            <script src="@routes.Assets.at("javascripts/animatedHeader.js")" type="text/javascript"></script>
-            <script src="@routes.Assets.at("javascripts/header.js")" type="text/javascript"></script>
             <meta charset="utf-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+            <title>Main</title>
+                <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
+            <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
+                <!-- Custom CSS -->
+            <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
+                <!-- jQuery -->
+            <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
+                <!-- Bootstrap Core JavaScript -->
+            <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
+
+                <!-- Plugin JavaScript -->
+            <script src="@routes.Assets.at("javascripts/jquery.easing.min.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/classie.js")" type="text/javascript"></script>
+            <script src="@routes.Assets.at("javascripts/cbpAnimatedHeader.js")" type="text/javascript"></script>
+
+                <!-- Custom Theme JavaScript -->
+            <script src="@routes.Assets.at("javascripts/freelancer.js")" type="text/javascript"></script>
         </head>
         <body>
             <nav class="navbar navbar-default navbar-fixed-top">
