--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -64,7 +64,7 @@
                             <span class="name">Team @project.name</span>
                             <hr class="star-light">
                             <span class="skills">@project.description</span>
-                            @if( session.get("username").equals(project.manager) ) {
+                            @if( session.get("username").equals(project.manager) || session.get("type").equals("Admin") ) {
                                 <a href="@routes.Application.GotoProjectEditDescription( project.id , project.name )" >Edit description</a>
                             }
                         </div>
