--- a/app/views/criteria.scala.html
+++ b/app/views/criteria.scala.html
@@ -1,18 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <title>Voting Criteria</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/criteria.css")">
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+    <title>Criteria Vote</title>
+
+        <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
+        <!-- Custom CSS -->
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/criteria.css")">
+        <!-- jQuery -->
+    <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
+        <!-- Bootstrap Core JavaScript -->
+    <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
+
+        <!-- Plugin JavaScript -->
+    <script src="@routes.Assets.at("javascripts/jquery.easing.min.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/classie.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/cbpAnimatedHeader.js")" type="text/javascript"></script>
+
+        <!-- Custom Theme JavaScript -->
+    <script src="@routes.Assets.at("javascripts/freelancer.js")" type="text/javascript"></script>
+
+
 </head>
 <body>
+    //header bar
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/index">Criteria Vote</a>
+            </div>
+
+                <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden active">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href= "/index">Index</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href= "/logout">Log Out</a>
+                    </li>
+                </ul>
+            </div>
+                <!-- /.navbar-collapse -->
+        </div>
+            <!-- /.container-fluid -->
+    </nav>
+
     <div class="gridcontainer clearfix">
         <div class="grid_3">
             <div class="fmcircle_out">
