--- a/app/views/complete.scala.html
+++ b/app/views/complete.scala.html
@@ -15,6 +15,7 @@
                 <!-- Custom CSS -->
             <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
             <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/login.css")">
+            <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/result.css")">
                 <!-- jQuery -->
             <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
                 <!-- Bootstrap Core JavaScript -->
@@ -65,14 +66,16 @@
                 </div>
                     <!-- /.container-fluid -->
             </nav>
+                <div class="resultTable">
+                    <div class="container">
                 <div class="text-center">
                     <table class="table table-bordered">
                         <thead>
                             <tr>
                                 <th>Name</th>
-                                <th>score1</th>
-                                <th>score2</th>
-                                <th>score3</th>
+                                <th>Creativity</th>
+                                <th>Appearance</th>
+                                <th>Performance</th>
 
                             </tr>
                         </thead>
@@ -89,6 +92,8 @@
                         <tbody>
                         }
                     </table>
+                </div>
+                </div>
                 </div>
 
 
