--- a/app/views/TimerPage.scala.html
+++ b/app/views/TimerPage.scala.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <title>Add Project</title>
+        <title>Timer page</title>
 
             <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
@@ -68,7 +68,6 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12" style="text-decoration-color: slategrey">
-                        Time Left >>> @controllers.TimerController.getTimeLeftInSec() <br>
                         <form id="timer" class="text-center" role="form" action = "/setTimer" method = post>
                             <div class="mat-div">
                                 Hour  >> <input class="mat-input" type="text" name="hour">
@@ -81,5 +80,46 @@
                 </div>
             </div>
         </header>
+
+        <div class = "text-center">Registration closes in <span id="time"></span> minutes!</div>
+
+        <script>
+        function startTimer(duration, display) {
+            var start = Date.now(),
+                diff,
+                minutes,
+                seconds;
+            function timer() {
+                // get the number of seconds that have elapsed since
+                // startTimer() was called
+                diff = duration - (((Date.now() - start) / 1000) | 0);
+
+                // does the same job as parseInt truncates the float
+                minutes = (diff / 60) | 0;
+                seconds = (diff % 60) | 0;
+
+                minutes = minutes < 10 ? "0" + minutes : minutes;
+                seconds = seconds < 10 ? "0" + seconds : seconds;
+
+                display.textContent = minutes + ":" + seconds;
+
+                if (diff <= 0) {
+                    // add one second so that the count down starts at the full duration
+                    // example 05:00 not 04:59
+                    start = Date.now() + 1000;
+                }
+            };
+            // we don't want to wait a full second before the timer starts
+            timer();
+            setInterval(timer, 1000);
+        }
+
+        window.onload = function () {
+            var timerDuration = @controllers.TimerController.getTimeLeftInSec(), display = document.querySelector('#time');
+            if ( timerDuration != -1 ) {
+                startTimer ( timerDuration, display ) ;
+            }
+        };
+        </script>
     </body>
 </html>
