--- a/app/views/criteria.scala.html
+++ b/app/views/criteria.scala.html
@@ -96,7 +96,7 @@
                     <div class="row">
                         <div class="footer-col col-md-6">
                             <h3>About Exceed Vote</h3>
-                            <p>. . .</p>
+                            <p>The Exceed Vote is the web-application<br>to help people and participants in the Exceed camp<br>to easily make a vote to the camp's project.</p>
                         </div>
                         <div class="footer-col col-md-6">
                             <h3>Location</h3>
