--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -117,6 +117,8 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <h1>Map</h1>
+                            <hr class="star-primary">
+                            <br>
                             <img src="@routes.Assets.at("images/map.png")" alt="map" style="width:50%;">
                         </div>
                     </div>
@@ -129,8 +131,8 @@
                     <div class="container">
                         <div class="row">
                             <div class="footer-col col-md-6">
-                                <h3>About Exceed Vote</h3>
-                                <p>. . .</p>
+                                <h3>Exceed Vote</h3>
+                                <p>The Exceed Vote is the web-application<br>to help people and participants in the Exceed camp<br>to easily make a vote to the camp's project.</p>
                             </div>
                             <div class="footer-col col-md-6">
                                 <h3>Location</h3>
