--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -19,25 +19,22 @@
         <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
     </head>
     <body>
-        <div class="login-form">
 
-            <h1>Login</h1>
-
+        <div class="box">
+            <h3>Members Login</h3>
             <form class="form-horizontal" action = "/log" method = POST>
                 @if(form.hasGlobalErrors) {
                     <p class="error">
                     @form.globalError.message
                     </p>
+                }else{
+                    <p><br></p>
                 }
-                <div class="form-group log-status">
-                    <input type="text" class="form-control" placeholder="Username " id="Username" name="username">
-                    <i class="fa fa-user"></i>
-                    <input type="password" class="form-control" placeholder="Password" id="Password" name="password">
-                    <i class="fa fa-lock"></i>
-                </div>
 
-            <button type="submit" class="log-btn" >Log in</button>
-
+                <input placeholder="Username" type="text" placeholder="Username " id="Username" name="username"/>
+                <input placeholder="Password" type="password" id="Password" name="password"/>
+                <br>
+                <button type="submit" class="log-btn" >Log in</button>
             </form>
         </div>
     </body>
