--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -50,7 +50,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="/index">@session.get("type") : @session.get("name") @if(controllers.TimerController.getTimeLeftInSec() != -1) {
-                        : <div id = "clock" style="display: inline"></div>}else { : Vote is close}</a>
+                        : <div id = "clock" style="display: inline"></div>}else { : Vote is closed}</a>
                 </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -327,7 +327,7 @@
                         <div class="row">
                             <div class="footer-col col-md-6">
                                 <h3>About Exceed Vote</h3>
-                                <p>. . .</p>
+                                <p>The Exceed Vote is the web-application<br>to help people and participants in the Exceed camp<br>to easily make a vote to the camp's project.</p>
                             </div>
                             <div class="footer-col col-md-6">
                                 <h3>Location</h3>
