--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,97 +1,80 @@
-*{
-    box-sizing:border-box;
-    -moz-box-sizing:border-box;
-    -webkit-box-sizing:border-box;
-    font-family:arial;
-}
-body{
-    background:url("/assets/images/loginbg.png");
-}
-h1{
-    color:#AAA173;
+/* new version */
+.error{
+    color:#f00;
     text-align:center;
-    font-faimly:icon;
 }
 
-.login-form{
-    width:350px;
-    padding:40px 30px;
-    background:rgba(235,235,205,0.7);
-    border-radius:4px;
-    -moz-border-radius:4px;
-    -webkit-border-radius:4px;
-    margin:50px auto;
+html,
+body {
+    background: -webkit-linear-gradient(top right, #485563, #29323c) no-repeat;
+    background: -moz-linear-gradient(top right, #485563, #29323c) no-repeat;
+    background: -o-linear-gradient(top right, #485563, #29323c) no-repeat;
+    background: -ms-linear-gradient(top right, #485563, #29323c) no-repeat;
+    background: linear-gradient(to bottom left, #485563, #29323c) no-repeat;
+    font-family: Arial;
+    height: 100%;
 }
-.form-group{
-    position: relative;
-    margin-bottom:15px;
+h3,
+a {
+    text-align: center;
 }
-.form-control{
-    width:100%;
-    height:50px;
-    border:none;
-    padding:5px 7px 5px 15px;
-    background:#fff;
-    color:#666;
-    border:2px solid #E0D68F;
-    border-radius:4px;
-    -moz-border-radius:4px;
-    -webkit-border-radius:4px;
+a {
+    display: block;
+    cursor: pointer;
+    font-size: 12px;
 }
-.form-control:focus, .form-control:focus + .fa{
-    border-color:#10CE88;
-    color:#10CE88;
+input {
+    border: none;
+    display: table;
+    margin: 0 auto;
+    padding: 5px;
 }
-.form-group .fa{
+input[type=button] {
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    background: #ee6555;
+    border-bottom: 2px solid #cc2814;
+    color: #fff;
+    cursor: pointer;
+    height: 40px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    width: 100%;
+}
+input[type=text],
+input[type=password] {
+    background: #eee;
+    height: 32px;
+    width: 96.4%;
+}
+input[type=text] {
+    -webkit-border-radius: 4px 4px 0 0;
+    border-radius: 4px 4px 0 0;
+    border-bottom: 2px solid #fff;
+}
+input[type=password] {
+    -webkit-border-radius: 0 0 4px 4px;
+    border-radius: 0 0 4px 4px;
+}
+.box {
+    background-color: #fff;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
     position: absolute;
-    right:15px;
-    top:17px;
-    color:#999;
+    top: -100px;
+    right: 0px;
+    left: 0px;
+    bottom: 0px;
+    height: 250px;
+    margin: auto;
+    max-width: 300px;
+    overflow: hidden;
+    padding: 10px;
 }
-.log-status.wrong-entry {
-    -webkit-animation: wrong-log 0.3s;
-    -moz-animation: wrong-log 0.3s;
-    -ms-animation: wrong-log 0.3s;
-    animation: wrong-log 0.3s;
-}
-.log-status.wrong-entry .form-control, .wrong-entry .form-control + .fa {
-    border-color: #ed1c24;
-    color: #ed1c24;
-}
-@keyframes wrong-log {
-    0% { left: 0px;}
-    20% {left: 15px;}
-    40% {left: -15px;}
-    60% {left: 15px;}
-    80% {left: -15px;}
-    100% {left: 0px;}
-}
-@-ms-keyframes wrong-log {
-    0% { left: 0px;}
-    20% {left: 15px;}
-    40% {left: -15px;}
-    60% {left: 15px;}
-    80% {left: -15px;}
-    100% {left: 0px;}
-}
-@-moz-keyframes wrong-log {
-    0% { left: 0px;}
-    20% {left: 15px;}
-    40% {left: -15px;}
-    60% {left: 15px;}
-    80% {left: -15px;}
-    100% {left: 0px;}
-}
-@-webkit-keyframes wrong-log {
-    0% { left: 0px;}
-    20% {left: 15px;}
-    40% {left: -15px;}
-    60% {left: 15px;}
-    80% {left: -15px;}
-    100% {left: 0px;}
-}
+
 .log-btn{
-    background:#0AC986;
+    background:#e05e23;
     dispaly:inline-block;
     width:100%;
     font-size:16px;
@@ -103,29 +86,3 @@ h1{
     -moz-border-radius:4px;
     -webkit-border-radius:4px;
 }
-
-
-.link{
-    text-decoration:none;
-    color:#9D8E79;
-    display:block;
-    text-align:right;
-    font-size:12px;
-    margin-bottom:15px;
-}
-.link:hover{
-    text-decoration:underline;
-    color:#8C918F;
-}
-.alert{
-    display:none;
-    font-size:12px;
-    color:#f00;
-    float:left;
-}
-
-.error{
-    color:#f00;
-    text-align:center;
-}
-
