--- a/app/views/criteria.scala.html
+++ b/app/views/criteria.scala.html
@@ -1,6 +1,5 @@
 
 @(message: String)
-
 @import result.Project
 
 <!DOCTYPE html>
@@ -20,6 +19,7 @@
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/criteria.css")">
         <!-- jQuery -->
     <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/jquery.countdown.js")"></script>
         <!-- Bootstrap Core JavaScript -->
     <script src="@routes.Assets.at("javascripts/bootstrap.js")" type="text/javascript"></script>
 
@@ -117,5 +117,26 @@
                 </div>
             </div>
         </footer>
+
+    <script type="text/javascript">
+    $('#clock').countdown('2015/04/18 ' + @controllers.TimerController.getTimeLeftHour + ':' + @controllers.TimerController.getTimeLeftMinute + ':0')
+    .on('update.countdown', function(event) {
+    var format = '%H:%M:%S';
+    if(event.offset.days > 0) {
+    format = '%-d day%!d ' + format;
+    }
+    if(event.offset.weeks > 0) {
+    format = '%-w week%!w ' + format;
+    }
+    $(this).html(event.strftime(format));
+    })
+    .on('finish.countdown', function(event) {
+    $(this).html('Vote is closed!');
+    $("#openPopUp").on("click",function(e) {
+    e.preventDefault(); // (or return false;)
+    })
+    //.parent().addClass('disabled')
+    });
+    </script>
 </body>
 </html>
