--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -370,9 +370,12 @@ a#openPopUpEdit:hover{
 }
 .popupEdit .popUpContainerEdit{
     width: 100%;
+    height: 70%;
     max-width: 400px;
     position: fixed; /* To avoid scroll to target */
-    left: 50%;
+    left:50%;
+    /*top:50%;*/
+    /*transform: translateX(-50%) translateY(-50%);*/
     top: -100vh;
     -webkit-transition: top  0.35s ease;
     -moz-transition: top 0.35s ease;
@@ -432,7 +435,7 @@ a#openPopUpEdit:hover{
     z-index: 9999991;
 }
 .popupEdit:target .popUpContainerEdit{
-    top: 50px;
+    top:20%;
     -webkit-transition: top  0.35s ease;
     -moz-transition: top 0.35s ease;
     -o-transition: top 0.35s ease;
@@ -464,4 +467,10 @@ a#openPopUpEdit:hover{
 
 #submit{
     width: 40%;
+}
+
+/* star */
+hr.star-light:after {
+    color: #fff;
+    background-color: #ffcd69;
 }
