--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -114,6 +114,32 @@
                                         <a href="#!" class="closePopUpOutSideEdit"></a>
                                     </aside>
                                 </div>
+
+                                <header>
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-lg-12"  style="text-decoration-color: slategrey">
+                                                <div>
+                                                    <h1>Upload a new image:</h1>
+                                                    @helper.form(action = routes.ImageController.uploadImage(project.id), 'enctype -> "multipart/form-data") {
+                                                        <div id = "dropzone">
+                                                            <div>drop image<br>* only .png file</div>
+                                                            <input type="file" name="image" accept="image/png" >
+                                                        </div>
+                                                        <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Upload image!</button>
+                                                    }
+                                                </div>
+
+                                                <div>
+                                                    <h1>Image in Database:</h1>
+                                                    <a href="@routes.Assets.at("projectimages/" + project.id + ".png")" target="blank">
+                                                        <img src="@routes.Assets.at("projectimages/" + project.id + ".png")" height="100" width="100">
+                                                    </a>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                </header>
                             }
                         </div>
                     </div>
