--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -59,6 +59,9 @@
                             <a href="#page-top"></a>
                         </li>
                         <li class="page-scroll">
+                            <a href= "/criteria">Criteria Vote</a>
+                        </li>
+                        <li class="page-scroll">
                             <a href= "/index">Index</a>
                         </li>
                         <li class="page-scroll">
@@ -125,7 +128,7 @@
 
             @if( !session.get("groupid").equals(project.id+"") ) {
                 <div class = pop>
-                    <a href="#popUp" id="openPopUp">Vote</a>
+                    <a href="#popUp" id="openPopUp">Rate</a>
                     <!-- POP UP -->
                     <aside id="popUp" class="popup">
                         <div class="popUpContainer">
