--- a/public/stylesheets/freelancer.css
+++ b/public/stylesheets/freelancer.css
@@ -108,6 +108,11 @@ header .intro-text .skills {
     font-weight: 300;
 }
 
+
+header #exceedHead{
+    font-size: 2.7em;
+}
+
 @media(min-width:768px) {
     header .container {
         padding-top: 200px;
@@ -120,6 +125,10 @@ header .intro-text .skills {
 
     header .intro-text .skills {
         font-size: 1.75em;
+    }
+
+    header #exceedHead{
+        font-size: 6em;
     }
 }
 
